--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "callconv",
+  "name": "exposeit",
   "version": "1.0.0",
   "description": "An interface protection library.  It redirects to the true source without exposing privates.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jasmine",
-    "debug": "node --inspect-brk ./node_modules/jasmine/bin/jasmine.js"
+    "test": "./node_modules/.bin/jest",
+    "debug": "node --inspect-brk ./node_modules/jest/bin/jest.js"
   },
   "keywords": [
     "interface"
@@ -13,6 +13,6 @@
   "author": "Christopher W Buteau <cbuteau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "jasmine": "3.2.0"
+    "jest": "23.6.0"
   }
 }
