--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
   "author": "Christopher W Buteau <cbuteau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "23.6.0"
+    "jest": "23.6.0",
+    "jest-puppeteer": "3.4.0",
+    "puppeteer": "1.9.0"
+  },
+  "jest": {
+    "preset": "jest-puppeteer",
+    "globals": {
+      "PATH": "http://localhost:4444"
+    },
+    "testMatch": [
+      "**/__tests__/*.js"
+    ]
   }
 }
