--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "Christopher W Buteau <cbuteau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "23.6.0",
-    "puppeteer": "1.9.0"
+    "jest": "23.6.0"
   },
   "jest": {
     "globals": {
