--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "description": "An interface protection library.  It redirects to the true source without exposing privates.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest",
-    "debug": "node --inspect-brk ./node_modules/jest/bin/jest.js"
+    "test": ".\\node_modules\\.bin\\karma start",
+    "test.ci": ".\\node_modules\\.bin\\karma start --single-run",
+    "debug": "node --inspect-brk node_modules/jasmine/bin/jasmine.js"    
   },
   "keywords": [
     "interface"
   ],
   "author": "Christopher W Buteau <cbuteau@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "jest": "23.6.0"
-  },
-  "jest": {
-    "globals": {
-      "PATH": "http://localhost:4444"
-    },
-    "testMatch": [
-      "**/__tests__/*.js"
-    ]
+  "devDependencies": {},
+  "dependencies": {
+    "jasmine": "3.4.0",
+    "jasmine-core": "3.4.0",
+    "karma": "4.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "2.0.0",
+    "karma-jasmine": "2.0.1"
   }
 }
